--- a/Packages/blueamulet.udonsharpoptimizer/package.json
+++ b/Packages/blueamulet.udonsharpoptimizer/package.json
@@ -1,14 +1,14 @@
 {
   "name": "blueamulet.udonsharpoptimizer",
   "displayName": "UdonSharpOptimizer",
-  "version": "1.0.12",
+  "version": "1.0.13",
   "description": "UdonSharp postprocessor to reduce instruction and variable counts",
   "gitDependencies": {},
   "vpmDependencies": {
     "com.vrchat.worlds": "^3.4.2"
   },
   "author": {
-    "name": "BlueAmulet"
+    "name": "BlueAmulet & PoderCow"
   },
   "legacyFolders": {},
   "legacyFiles": {}
